// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse parameters Should inherit properly 1`] = `
Array [
  Object {
    "additionalProperties": false,
    "fields": Array [
      Array [
        "sameParam",
        Object {
          "id": "#/simple/test/get/sameParam",
          "name": "RqstSimpleTestGet_Field_sameParam",
          "type": "integer",
        },
      ],
    ],
    "id": "#/simple/test/get",
    "name": "RqstSimpleTestGet",
    "required": Array [],
    "type": "object",
  },
]
`;

exports[`parse parameters Should parse a basic parameter 1`] = `
Array [
  Object {
    "additionalProperties": false,
    "fields": Array [
      Array [
        "param1",
        Object {
          "id": "#/simple/test/get/param1",
          "name": "RqstSimpleTestGet_Field_param1",
          "type": "string",
        },
      ],
    ],
    "id": "#/simple/test/get",
    "name": "RqstSimpleTestGet",
    "required": Array [],
    "type": "object",
  },
]
`;

exports[`parse parameters Should parse global parameters 1`] = `
Array [
  Object {
    "additionalProperties": false,
    "fields": Array [
      Array [
        "globalParam1",
        Object {
          "id": "#/parameters/globalParam1",
          "name": "parameters_Field_globalParam1",
          "type": "string",
        },
      ],
      Array [
        "param1",
        Object {
          "id": "#/simple/test/get/param1",
          "name": "RqstSimpleTestGet_Field_param1",
          "type": "string",
        },
      ],
    ],
    "id": "#/simple/test/get",
    "name": "RqstSimpleTestGet",
    "required": Array [],
    "type": "object",
  },
]
`;

exports[`parse parameters Should parse multiple parameters 1`] = `
Array [
  Object {
    "additionalProperties": false,
    "fields": Array [
      Array [
        "param1",
        Object {
          "id": "#/simple/test/get/param1",
          "name": "RqstSimpleTestGet_Field_param1",
          "type": "string",
        },
      ],
      Array [
        "param2",
        Object {
          "id": "#/simple/test/get/param2",
          "name": "RqstSimpleTestGet_Field_param2",
          "type": "boolean",
        },
      ],
    ],
    "id": "#/simple/test/get",
    "name": "RqstSimpleTestGet",
    "required": Array [],
    "type": "object",
  },
]
`;

exports[`parse parameters Should parse path parameters 1`] = `
Array [
  Object {
    "additionalProperties": false,
    "fields": Array [
      Array [
        "pathParam1",
        Object {
          "id": "#/simple/test/pathParam1",
          "name": "SimpleTest/_Field_pathParam1",
          "type": "string",
        },
      ],
      Array [
        "param1",
        Object {
          "id": "#/simple/test/get/param1",
          "name": "RqstSimpleTestGet_Field_param1",
          "type": "string",
        },
      ],
    ],
    "id": "#/simple/test/get",
    "name": "RqstSimpleTestGet",
    "required": Array [],
    "type": "object",
  },
]
`;

exports[`parse response Should parse a basic response 1`] = `
Array [
  Object {
    "additionalProperties": undefined,
    "fields": Array [
      Array [
        "resp1",
        Object {
          "id": "#/simple/test/get/200/Field_resp1",
          "name": "RespSimpleTestGet200_Field_resp1",
          "type": "string",
        },
      ],
    ],
    "id": "#/simple/test/get/200",
    "name": "RespSimpleTestGet200",
    "required": Array [],
    "type": "object",
  },
  Object {
    "choices": Array [
      Object {
        "id": "/simple/test/choices/RespSimpleTestGet200",
        "name": "RespSimpleTestGet_Ref_RespSimpleTestGet200",
        "ref": "#/simple/test/get/200",
        "type": "ref",
      },
    ],
    "id": "#//simple/test/get",
    "name": "RespSimpleTestGet",
    "required": Array [],
    "type": "anyOf",
  },
]
`;
